# bilibili-stream-assistant-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
telegram_bot/: app.py  bilibili.py  config.py  handlers.py  main.py  watcher.py
