[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "telegram-bot-project"
version = "0.1.0"
description = "A simple Telegram bot (python-telegram-bot) managed with uv"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
  "python-telegram-bot>=22.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.28.0",
]

[project.scripts]
telegram-bot = "telegram_bot.main:main"

[tool.hatch.build.targets.wheel]
packages = ["telegram_bot"]
